update api for job results handling
