# terraform/modules/api/api.yml
@@ -179,32 +179,6 @@ paths:
           description: Unauthorized
         "500":
           description: Internal server error
-
-  /jobs/{job_id}:
-    get:
-      summary: Retrieve a specific job
-      security:
-        - UserPool: []
-      parameters:
-        - name: job_id
-          in: path
-          required: true
-          schema:
-            type: string
-      x-amazon-apigateway-integration:
-        uri: arn:aws:apigateway:${region}:lambda:path/2015-03-31/functions/${lambda_arn}/invocations
-        httpMethod: POST
-        type: aws_proxy
-        passthroughBehavior: when_no_match
-      responses:
-        "200":
-          description: Successfully retrieved job
-        "403":
-          description: Unauthorized
-        "404":
-          description: Job not found
-        "500":
-          description: Internal server error
   /jobs/{job_id}/download/{file_id}:
     get:
       summary: Download a specific file
